--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,5 +2,5 @@ RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
 RewriteRule ^(.*)$ https://www.joekellyonline.com/$1 [R,L]
 <filesMatch ".(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf|svg|png)$">
-    Header set Cache-Control "max-age=84600, public"
+    Header set Cache-Control "max-age=31536000, public"
 </filesMatch>
