--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"sourceMap": true,
 		"noImplicitAny": true,
 		"watch": true,
-		"target":"ES6"
+		"target":"es2017"
 	},
 	"exclude": [
 		"node_modules"
