--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "This is the personal web page repository for Joe Kelly. The website url is located at [joekellyonline.com](https://www.joekellyonline.com)",
   "main": "script.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pecuniam1/joekellyonline.git"
@@ -15,5 +14,8 @@
   "bugs": {
     "url": "https://github.com/pecuniam1/joekellyonline/issues"
   },
-  "homepage": "https://github.com/pecuniam1/joekellyonline#readme"
+  "homepage": "https://github.com/pecuniam1/joekellyonline#readme",
+  "devDependencies": {
+    "typedoc": "^0.19.2"
+  }
 }
