--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   },
   "homepage": "https://github.com/pecuniam1/joekellyonline#readme",
   "devDependencies": {
+    "autoprefixer": "^10.0.1",
+    "cross-env": "^7.0.2",
     "typedoc": "^0.19.2"
+  },
+  "dependencies": {
+    "clean-css": "^4.2.3",
+    "postcss-cli": "^8.1.0"
   }
 }
